--- a/validate.yml
+++ b/validate.yml
@@ -1,2 +1,14 @@
-- name: Validate JSON
-  uses: OrRosenblatt/validate-json-action@0.1.0
+name: Validate JSONs
+
+on: [pull_request]
+
+jobs:
+  verify-json-validation:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Validate JSON
+        uses: docker://orrosenblatt/validate-json-action:latest
+        env:
+          INPUT_SCHEMA: /general.json
+          INPUT_JSONS: /general.json
